Purge impl-only animations awaiting deletion in AnimationPlayer::UpdateState.

Previously, animations in WAITING_FOR_DELETION state would only be purged via
AnimationPlayer::PushPropertiesTo, which synchronizes impl- and main-thread
players.  But the player in ScrollOffsetAnimationsImpl has no main-thread copy,
so its animations never got deleted after they finished.

BUG=701025
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2757453003
Cr-Commit-Position: refs/heads/master@{#457443}

Former-commit-id: e26333eb717aa94b9f05ccf34ec91bfe31927f2a